# BifrostKit

./: README.md  pyproject.toml
bifrostkit/cli/: main.py  mcp_cmd.py
bifrostkit/core/: project.py
bifrostkit/providers/mcp/: registry.py  runner.py  types.py
mcp_mock/: Dockerfile  server.py
mcps/: refinador_contexto.json
projects/: exemplo.yaml
